--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,154 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Orbitron&family=PT+Sans+Narrow&family=Poppins:wght@200&family=Roboto:wght@100&family=Source+Sans+Pro:wght@200&family=Splash&display=swap');
+
+/*body coloring*/
+body{
+ padding: 0%;
+  margin: 0%;
+  background-color: #202129;
+}
+/* navigation top */
+.navigation_top{
+  position: fixed;
+  width: 100%;
+  display: grid;
+  height: 55px;
+  min-width: 700px;
+  grid-template-columns: 15% 50% 15%;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(255, 0, 183);
+  box-shadow: .5px .5px 4px rgb(144, 38, 0);
+  overflow: hidden;
+}
+/*content left -mid -right*/
+.navigation_top_left{
+  padding: 0%;
+  margin: 0%;
+  min-width: 180px;
+  display: flex;
+  justify-content: left;
+  border-right: 1px solid rgb(255, 0, 183);
+}
+  #logo{
+  
+    border: solid inherit;
+    margin-top: 0%;
+  }
+.nav_top_left_header{
+    margin: 0%;
+    display: inline;
+    font-size: 170%;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 800;
+    color: azure;
+    }
+.nav_mid_li{
+  display: inline;
+  margin-right: 3%;
+}
+.mid_links{
+  color: azure;
+  font-size: larger;
+  font-family: 'Poppins',sans-serif;
+  font-weight: bolder;
+}
+#search{
+  color: azure;
+}
+#top_input1{
+  display: none;
+}
+#top_input2{
+  width: 25%;
+  padding: .5%;
+  padding-left: 2%;
+  font-size: small;
+  border-radius: 50px;
+  color: black;
+  border: none;
+  background-color: azure;
+  animation: sizen 2s 1;
+}
+@keyframes sizen {
+  from{width: 0%;}
+  to{width: 25%;}
+  
+}
+.nav_mid_ul{
+  margin-top: 1%;
+}
+.navigation_top_middle{
+  padding: 0%;
+}
+#navigation_top_right{
+  margin-top: 5%;
+}
+#nav_top_right_icons{
+  padding-right: 5%;
+  margin-top: 2%;
+  margin-right: 5%;
+  color: azure;
+  font-size: larger;
+}
+#menu_bars{
+ display: none;
+} 
+/*side bar navigation*/
+.side_navigation{
+  margin-top: 55px;
+  position: fixed;
+  width: 14.88%;
+  min-width: 180px;
+  height: 100%;
+  border-right: 1px solid rgb(255, 0, 183);
+  box-shadow: .5px .5px 4px rgb(144, 38, 0);
+}
+.nav_side_ul{
+  margin-top: 0%;
+
+}
+.nav_side_li{
+  list-style: none;
+  color: azure;
+  padding: 3%;
+  font-size: larger;
+  font-family: sans-serif;
+
+}
+#nav_side_icons{
+  margin: 2%;
+  margin-right: 15%;
+  
+}
+/* lower playing track */
+.playing{
+  display: grid;
+  justify-content: center;
+  height: 100%;
+  border: 1px solid rgb(255, 0, 183);
+  box-shadow: .5px .5px 4px rgb(144, 38, 0);
+}
+.playinglogo{
+  /* background-color: white; */
+  border-radius: 50%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+
+/* media queries for responsiveness tablets
+-tablets 900- */
+ @media screen and (max-width:900px) {
+   #menu_bars{
+    color: azure;
+    display: inline-block;
+    font-size: x-large;
+ 
+  }
+  .nav_top_left_header{
+    margin-top: 3.5%;
+  font-size: x-large;
+  }
+  .nav_right_toggle{
+    display: none;
+  }
 }
