--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body{
   background-color: #202129;
 }
 #root{
-  height: 100%;
   background-color: #202129;
 }
 /* navigation top */
@@ -159,7 +158,19 @@ body{
   /* background-color: white; */
   border-radius: 50%;
 }
-
+.content{
+  min-height: 200vh;
+  
+  
+}
+.results{
+  margin-left: 20%;
+  position: absolute;
+  margin-top: 65px;
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  justify-content: space-between;
+}
 
 
 
