--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body{
   background-color: #202129;
   width: 100%;
   height: fit-content;
+  overflow-x: hidden;
 
 }
 p{
@@ -46,7 +47,7 @@ p{
   }
  
 .nav_top_left_header{
-    margin: 0%;
+    margin: 4% 0%;
     display: inline;
     font-size: 170%;
     font-family: 'Poppins', sans-serif;
@@ -54,13 +55,14 @@ p{
     color: azure;
     }
 .nav_mid_li{
-  margin-right: 3%;
+  margin: 0% 0%;
   padding-left: 5px;
   width: fit-content;
   list-style-type: none;
   
 }
 .optional{
+  margin: 0.2% 0%;
   display: flex;
 }
 .mid_links{
@@ -71,9 +73,9 @@ p{
   font-weight: bolder;
 }
 #search{
-  margin-top: 4%;
+  margin-top: 5.2%;
   color: black;
-  transform: translateX(-55px);
+  transform: translateX(-2.5rem);
   display: inline;
   position: absolute;
   animation: sizen 2s 1;
@@ -82,8 +84,8 @@ p{
 
 
 #top_input2{
-  margin: 2% 10%;
-  width: 120%;
+  margin: 2.5% 5%;
+  width: 110%;
   padding: 1.5% 1%;
   font-size: medium;
   border-radius: 10px;
@@ -250,7 +252,6 @@ h3,h4,h5{
      padding: 10px;
     box-shadow: 0px 0px 4px azure;
     width: fit-content;
-    
     min-width: 690px;
     justify-content: space-between;
   
@@ -267,7 +268,6 @@ h3,h4,h5{
   margin-left:17%;
   display: flex;
   left: 20px;
-  min-width: 650px;
   flex-wrap: wrap;
   justify-content: space-around;
   animation: slide 2s 1;
@@ -302,16 +302,16 @@ h3,h4,h5{
   height: 10vh;
 }
 .track_info{
-  padding: 10px;
- 
+  padding: 10px; 
   width: 17.32%;
+  min-width: 180px;
   border-right: 1px solid rgb(255, 0, 183);
   box-shadow: .5px .5px 4px rgb(144, 38, 0);
 }
 audio{
+  
   font-size: xx-large;
   padding: 2%;
-  bottom: 15%;
   width:100%;
   
   
@@ -322,15 +322,17 @@ audio{
 @media screen and (max-width:870px) {
 
   .home_content{
+    margin-left: 27%;
+    width: 70%;
     display: grid;
-    left: 120px;
-    grid-template-columns: 100%;
+    right: 10px;
+    grid-template-columns: 50% 50%;
     background-color: #202129;
     
   }
   .home_content_item{
-    margin: 2% 0%; 
-    width: 50%;
+    margin: 2% 1%; 
+    width: 90%;
   }
   #menu_bars{
     float: right;
@@ -358,17 +360,19 @@ audio{
   }
 }
 /* for phones and small devices */
-@media screen and (max-width:550px) {
+@media screen and (max-width:650px) {
   .side_navigation{
     display: none;
   }
   .home_content{
+    display: flex;
+    flex-direction: column;
     left: 2px;
     margin-left: 2%;
   }
   .home_content_item{
     margin: 2% 0%; 
-    width: 41vh;
+    width: 30rem;
   }
   h4{
     font-size: large;
@@ -376,4 +380,49 @@ audio{
   .optional{
     display: none;
   }
+  .navigation_top_left{
+    padding: 0%;
+    margin: 0%;
+    min-width: 90px;
+    display: flex;
+    width: fit-content;
+    justify-content: left;
+    border-right: none;
+  }
+  #search{
+    color: rebeccapurple;
+    margin-top: 7%;
+    transform: translateX(-43px);
+  }
+  #menu_bars{
+    float: right;
+    margin: 40% 0%;
+    display: grid;
+    color: azure;
+    font-size: x-large;
+   } 
+   #top_input2{
+    margin: 2.5% 10%;
+    width: 80%;
+    padding: 1.5% 1%;
+    font-size: medium;
+    border-radius: 10px;
+    color: black;
+    border: 2px solid rgb(144, 38, 0);
+    box-shadow: .5px .5px 2px rgb(255, 0, 183) ;
+    background-color: azure;
+    animation: sizen 4s 1;
+  }
+  .player{
+  height: 7vh;
+  }
+ .track_info{
+  padding: 5px; 
+  width: 5vh;
+  min-width: 1;
+  border-right: 1px solid rgb(255, 0, 183);
+  box-shadow: .5px .5px 4px rgb(144, 38, 0);
+
+
+}
 }
